Revert "everything is working now. the form is hidden behind the menu. someone should fix it"
This reverts commit 6de1b68f4ac02488fcd48a919071a7801fa68000.

--- a/seak/main.css
+++ b/seak/main.css
@@ -432,7 +432,7 @@ body {
 }
 
 /* hide customer html  */
- /* div.addCustomer{
+ /* #addCustomer{
   display: none;
 } */
 
@@ -443,12 +443,6 @@ body {
 .hideAddForm{
   display: none;
 }
-
-.viewCustomer{
-  display: grid;
-}
-
-/* add form style */
 #add-form{
   display: none;
   position: absolute;
